Added downloading, extraction and adding of Flash Player plugins.
Visual feedback still needs to be added.

--- a/.settings/com.powerflasher.fdt.classpath
+++ b/.settings/com.powerflasher.fdt.classpath
@@ -23,4 +23,5 @@
     <AS3Classpath generateProblems="false" sdkBased="true" type="lib" useAsSharedCode="false">frameworks/libs/air/servicemonitor.swc</AS3Classpath>
     <AS3Classpath generateProblems="false" sdkBased="false" type="lib" useAsSharedCode="false">libs/robotlegs-framework-v1.4.0.swc</AS3Classpath>
     <AS3Classpath generateProblems="false" sdkBased="false" type="lib" useAsSharedCode="false">libs/air-sqlite-v0.1.2.3.swc</AS3Classpath>
+    <AS3Classpath generateProblems="false" sdkBased="false" type="lib" useAsSharedCode="false">libs/fzip.swc</AS3Classpath>
 </AS3Classpath>
