--- a/.settings/com.powerflasher.fdt.classpath
+++ b/.settings/com.powerflasher.fdt.classpath
@@ -24,4 +24,5 @@
     <AS3Classpath generateProblems="false" sdkBased="false" type="lib" useAsSharedCode="false">libs/robotlegs-framework-v1.4.0.swc</AS3Classpath>
     <AS3Classpath generateProblems="false" sdkBased="false" type="lib" useAsSharedCode="false">libs/air-sqlite-v0.1.2.3.swc</AS3Classpath>
     <AS3Classpath generateProblems="false" sdkBased="false" type="lib" useAsSharedCode="false">libs/fzip.swc</AS3Classpath>
+    <AS3Classpath generateProblems="false" sdkBased="false" type="lib" useAsSharedCode="false">libs/analytics.swc</AS3Classpath>
 </AS3Classpath>
