--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,7 @@
-#Mon Sep 12 21:15:04 CEST 2011
+#Sun Dec 04 00:14:34 CET 2011
 eclipse.preferences.version=1
+encoding//locale/en_US/Main.properties=UTF-8
+encoding//locale/en_US/Preferences.properties=UTF-8
+encoding//locale/nl_NL/Main.properties=UTF-8
+encoding//locale/nl_NL/Preferences.properties=UTF-8
 encoding/<project>=UTF-8
